# Qt_tutorial

./: CMakeLists.txt
PaintEx/: PaintEx.pro  mainwidget.cpp  mainwidget.h  paintarea.cpp  paintarea.h
SVGTest/: SVGTest.pro  mainwindow.cpp  mainwindow.h  svgwidget.cpp  svgwidget.h  svgwindow.cpp  svgwindow.h
geometry/: CMakeLists.txt  geometry.cpp  geometry.h  geometry.pro
vs_build/Qt_tutorial/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Thanos.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs_build/Qt_tutorial/geometry/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  geometry.vcxproj  geometry.vcxproj.filters
vs_build/Qt_tutorial/geometry/geometry_autogen/: mocs_compilation.cpp
vs_build/Qt_tutorial/geometry/geometry_autogen/include_Debug/EWIEGA46WW/: moc_geometry.cpp
