cmake_minimum_required(VERSION 3.8)

project(Thanos)

add_subdirectory(geometry)

#set(CPACK_GENERATOR "tar.gz")
#set(CPACK_PACKAGE_VERSION "1.0")
#set(CPACK_PACKAGE_NAME "Thanos")
#set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Thanos")
#set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "description")
#include(CPack)
